--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "next": "9.0.7",
     "react": "16.10.1",
     "react-dom": "16.10.1"
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
